; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_nd6_nbr.c_nd6_ifptomac.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_nd6_nbr.c_nd6_ifptomac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @nd6_ifptomac(%struct.ifnet* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.ifnet*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %3, align 8
  %4 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %5 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %12 [
    i32 137, label %7
    i32 134, label %7
    i32 130, label %7
    i32 133, label %7
    i32 132, label %7
    i32 128, label %7
    i32 131, label %7
    i32 135, label %7
    i32 136, label %7
    i32 129, label %7
  ]

7:                                                ; preds = %1, %1, %1, %1, %1, %1, %1, %1, %1, %1
  %8 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %9 = call i32 @IF_LLADDR(%struct.ifnet* %8)
  %10 = sext i32 %9 to i64
  %11 = inttoptr i64 %10 to i32*
  store i32* %11, i32** %2, align 8
  br label %13

12:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %13

13:                                               ; preds = %12, %7
  %14 = load i32*, i32** %2, align 8
  ret i32* %14
}

declare dso_local i32 @IF_LLADDR(%struct.ifnet*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
